fix center alignment of text

--- a/foundations/intro-to-css/01-css-methods/style.css
+++ b/foundations/intro-to-css/01-css-methods/style.css
@@ -3,6 +3,6 @@ div {
     background-color: red;
     font-size: 32px;
     font-weight: bold;
-    align-items: center;
+    text-align: center;
 
 }
